--- a/ui/html/base.tmpl
+++ b/ui/html/base.tmpl
@@ -12,7 +12,8 @@
         />
         <link
             rel="stylesheet"
-            href="https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700"
+            href="https://fonts.googleapis.com/css?
+family=Ubuntu+Mono:400,700"
         />
     </head>
     <body>
@@ -20,9 +21,13 @@
             <h1><a href="/">Snippetbox</a></h1>
         </header>
         {{template "nav" .}}
-        <main>{{template "main" .}}</main>
+        <main>
+            <!-- Display the flash message if one exists -->
+            {{with .Flash}}
+            <div class="flash">{{.}}</div>
+            {{end}} {{template "main" .}}
+        </main>
         <footer>
-            <!-- Update the footer to include the current year -->
             Powered by <a href="https://golang.org/">Go</a> in {{.CurrentYear}}
         </footer>
         <script src="/static/js/main.js" type="text/javascript"></script>
